tests/tokenizer/invalid_and.expected
<string>:1:1: error: bitwise and not supported
&
^
